# musicService

./: .gitignore  CMakeLists.txt  README.md  main.cpp  stylecontainer.h
MusicBaseData/: CMakeLists.txt  example.cpp
MusicBaseData/General/: DBWorker.cpp  DataBase.cpp
MusicBaseData/General/headers/: DBWorker.h  DataBase.h
MusicBaseData/Objects/: Album.cpp  Category.cpp  Playlist.cpp  SharedLibrary.cpp  Song.cpp  UserLibrary.cpp  genre.cpp
MusicBaseData/Objects/headers/: Album.h  Category.h  Genre.h  Playlist.h  SharedLibrary.h  Song.h  UserLibrary.h  genre.h
MusicBaseData/Persons/: Performer.cpp  User.cpp
MusicBaseData/Persons/headers/: Performer.h  User.h
MusicBaseData/lib/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
MusicBaseData/lib/.cmake/api/v1/reply/: cache-v2-56035330973f23f48bb3.json  cmakeFiles-v1-53d5f68c358c3d0b37fa.json  codemodel-v2-1426196d397dc52195a5.json  index-2023-01-08T11-12-23-0095.json  target-MusicBaseData-Debug-2439573489f655a1ee23.json  toolchains-v1-e37cb67ee27657762b9e.json
MusicBaseData/src/General/: DataBase.cpp
MusicBaseData/src/General/headers/: DBWorker.h  DataBase.h
MusicBaseData/src/Objects/: Album.cpp  Genre.cpp  UserLibrary.cpp
MusicBaseData/src/Objects/headers/: SharedLibrary.h  UserLibrary.h
MusicBaseData/src/Persons/: Performer.cpp  User.cpp
actions/: addsongtoplaylist.cpp  addsongtoplaylist.h  deletesongfromalbum.h  deletesongfromplaylist.cpp  deletesongfromplaylist.h
base/: basefragment.cpp  basefragment.h  basefragment.ui  basemodel.cpp  basemodel.h  basepicturepb.cpp  basepicturepb.h  basescreensfactory.cpp  basescreensfactory.h
buttons/: albumpb.cpp  albumpb.h  categorypb.cpp  categorypb.h  categorypb.ui  genrepb.h  playlistpb.cpp  playlistpb.h  playlistpb.ui  songpb.cpp  songpb.h  songpb.ui  userpb.cpp  userpb.h  userpb.ui
common/: mainwindow.cpp  mainwindow.h  navigator.cpp  navigator.h  screenfactory.cpp  screenfactory.h
forms/: playlistsform.cpp  playlistsform.h  playlistsform.ui
fragments/: albumfragment.cpp  albumfragment.h  albumfragment.ui  catalogfragment.cpp  catalogfragment.h  catalogfragment.ui  categoryfragment.cpp  categoryfragment.h  categoryfragment.ui  createalbumfragment.h  createplaylistfragment.cpp  createplaylistfragment.h  createplaylistfragment.ui  createsongfragment.cpp  createsongfragment.h  genrefragment.cpp  genrefragment.h  genrefragment.ui  loginfragment.cpp  loginfragment.h  loginfragment.ui  performerfragment.cpp  performerfragment.h  performerfragment.ui  performerstartfragment.cpp  performerstartfragment.h  performerstartfragment.ui  performertoolsfragment.cpp  performertoolsfragment.h  performertoolsfragment.ui  playlistfragment.cpp  playlistfragment.h  playlistfragment.ui  registrfragment.cpp  registrfragment.h  registrfragment.ui  searchfragment.cpp  searchfragment.h  searchfragment.ui  songfragment.cpp  (+23 more)
models/: albummodel.h  categorymodel.cpp  categorymodel.h  databasemodel.cpp  databasemodel.h  performermodel.cpp  performermodel.h  playlistmodel.cpp  playlistmodel.h  songmodel.cpp  songmodel.h  usermodel.cpp  usermodel.h
pictures/: BD_22_VoprosyEkz3.docx
sqlScripts/: DatabaseCreating.sql  Music_Service_TablesCreating.sql
src/actions/: addsongtoplaylist.cpp  deletesongfromalbum.cpp  deletesongfromalbum.h  deletesongfromplaylist.h
src/base/: basefragment.h  basepicturepb.h  basepicturepb.ui  basescreensfactory.h
src/buttons/: albumpb.h  categorypb.h  genrepb.cpp  genrepb.h  playlistpb.h  songpb.h  songpb.ui
src/common/: mainwindow.cpp  mainwindow.h  navigator.h  screenfactory.h
src/forms/: playlistsform.cpp  playlistsform.h  playlistsform.ui
src/fragments/: albumfragment.cpp  albumfragment.h  catalogfragment.cpp  catalogfragment.h  categoryfragment.cpp  categoryfragment.h  categoryfragment.ui  createalbumfragment.cpp  createalbumfragment.h  createalbumfragment.ui  createplaylistfragment.h  createsongfragment.ui  genrefragment.h  loginfragment.cpp  performerfragment.cpp  performerfragment.h  performerstartfragment.cpp  performerstartfragment.h  performerstartfragment.ui  performertoolsfragment.cpp  performertoolsfragment.h  performertoolsfragment.ui  playlistfragment.ui  registrfragment.cpp  registrfragment.h  searchfragment.cpp  searchfragment.h  splashfragment.cpp  splashfragment.ui  startfragment.cpp  startfragment.h  userfavourites.cpp  userfavourites.h  userfragment.cpp  userfragment.h  userlibraryfragment.h  userlibraryfragment.ui  userplaylists.cpp  userplaylists.h  userplaylists.ui  (+2 more)
src/models/: databasemodel.cpp  databasemodel.h  performermodel.cpp  performermodel.h  usermodel.cpp  usermodel.h
